--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </section>
             
             <div class="form-actions">
-                <button type="submit" id="submit-btn">Nộp và Tải file CSV</button>
+                <button type="submit" id="submit-btn">Hoàn tất</button>
                 <button type="button" id="reset-btn">Làm lại</button>
             </div>
         </form>
